--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <title>Web Fatale: Ein Buch von Johannes Ippen</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Wie du Webseiten gestaltest, denen niemand widerstehen kann.">
+    <meta name="keywords" content="Buch, Rheinwerk, Ippen, Usability, UX, User Experience, Interaktion, Webdesign">
     <link href="webfatale.css" rel="stylesheet">
     <script src="https://use.typekit.net/cwd3aju.js"></script>
     <script>try{Typekit.load({ async: true });}catch(e){}</script>
@@ -27,13 +29,13 @@
     <div class="opener-cta">
       <h2>Web Fatale</h2>
       <p>Wie du Webseiten gestaltest, denen niemand widerstehen kann.</p>
-      <p>Im Buchhandel ab 28. März 2016</p>
-    <a class="opener-primary" href="https://www.rheinwerk-verlag.de/web-fatale_3982/"><strong>Jetzt vorbestellen!</strong> <span class="price">EUR 34,90 + Versand gratis</span></a>
+      <p>Im Buchhandel ab 29. März 2016</p>
+    <a class="opener-primary" href="http://www.amazon.de/Web-Fatale-widerstehen-Experience-Interaktion/dp/3836238985/"><strong>Jetzt vorbestellen!</strong> <span class="price">EUR 34,90 + Versand gratis</span></a>
   </div>
 </section>
 <section class="anleser">
 
-<p><big>Sie wollen aus der Flut der Online-Angebote herausstechen? Dann sollten Sie Ihre Nutzer verführen!</big> Sie brauchen das »je ne sais quoi«, das aus einer »schönen« Website eine zum Verlieben macht. Gewitzt und unvergleichlich originell zeigt Ihnen dieses Buch, wie Sie diese anspruchsvolle Design-Aufgabe lösen und Web-Produkte gestalten, die Nutzer auf allen Ebenen überzeugen. Lernen Sie, wie Sie die Usability Ihrer Website perfektionieren und den Website-Besuch zu einem rundum gelungenen Erlebnis gestalten. – Für Websites, die jeder besuchen und niemand verlassen will!</p>
+<p><big>Du willst aus der Flut der Online-Angebote herausstechen? Dann solltest du deine Nutzer verführen!</big> Du brauchst das »je ne sais quoi«, das aus einer »schönen« Website eine zum Verlieben macht. Gewitzt und unvergleichlich originell zeigt dir dieses dieses Buch, wie du diese anspruchsvolle Design-Aufgabe löst und Web-Produkte gestaltest, die Nutzer auf allen Ebenen überzeugen. Lerne, wie du die Usability deiner Website perfektionierst und den Website-Besuch zu einem rundum gelungenen Erlebnis gestaltest. – Für Websites, die jeder besuchen und niemand verlassen will!</p>
 
 <ul>
 <li>Prinzipien und Grundlagen verführerischen Webdesigns</li>
@@ -42,73 +44,13 @@
 </ul>
 
 </section>
-<section class="toc">
 
-<h1 id="inhalt">Inhalt</h1>
-
-<img src="images/toc-first.png" class="toc-book toc-book-first">
-
-<ol class="toc-first">
-<li>Usability<br><small>Ein Auftritt mit Klasse – von Mäusen, Fenstern, Metaphern und Missverständnissen.</small></li>
-<li>User Experience<br><small>Das Spiel mit den Reizen: Wie du Erlebnisse erschaffst und mit Gamification punktest.</small></li>
-<li>Nutzer (ver)führen<br><small>Prinzipien und Grundlagen verführerischen Webdesigns, von IKEA bis über Miller’s Law bis hin zu Onboarding.</small></li>
-<li>Nutzerbindung<br><small>Um Kopf und Kragen: Personas, Positive Verstärkung und die richtige Contentstrategie machen aus Nutzern Fans.</small></li>
-</ol>
-<img src="images/toc-first.png" class="toc-book toc-book-second">
-<ol start="5" class="toc-second">
-<li>Marktstrategien<br><small>Hinreißende Absätze: Den richtigen Ton treffen, Social Proof, Pricing, Retargetting und Content-Marketing erklärt.</small></li>
-<li>Social Media<br><small>Lass uns Freunde bleiben – der Nutzer als soziales Wesen, von den besten Marken lernen.</small></li>
-<li>User Testing<br><small>Bitte keine Stereotypen – der Nutzer im Fokus. Usability-Tests, A/B-Tests und Tracking.</small></li>
-</ol>
-<ul class="toc-facts">
-<li>330 Seiten</li>
-<li>Bildbuchformat 19 x 24 cm</li>
-<li>Rheinwerk Design; Auflage: 1 (28. März 2016)</li>
-<li>ISBN 978-3-8362-3898-4</li>
-<li>Autor: Johannes Ippen</li>
-</ul>
-
-</section>
-<section class="autor">
-
-<h1 id="autor_johannes_ippen">Autor</h1>
-
-<p>Johannes Ippen ist Designer und Autor aus Berlin. Mit seinem Team ist er für das Produktmarketing beim Indie-Spieleentwickler Wooga verantwortlich.</p>
-
-<div class="autor-links">
-  <a href="#">Twitter</a>
-  <a href="#">Instagram</a>
-  <a href="#">Dribbble</a>
-</div>
-
-</section>
-<section class="extras">
-
-<h2>#webfatale</h2>
-
-<div class="extras-spotify">
-<a href="https://open.spotify.com/user/1121762316/playlist/7DtuTV2f8Is3z1bLYSvmRH"><img src="images/playlist.jpg"></a>
-</div>
-<div class="extras-instagram" id="instafeed">
-</div>
-
-</section>
 <section class="vip">
 
-<h1>VIP</h1>
-
-<div class="vip-links">
-  <!-- ul>
-    <li>Kapitel 1</li>
-    <li><a href="http://www.typecast.com">Typecast</a></li>
-    <li><a href="http://www.mylapka.com">Lapka</a></li>
-  </ul -->
+<p>Erscheint am:</p>
+<h1>29. März 2016</h1>
+<p><a href="http://www.amazon.de/Web-Fatale-widerstehen-Experience-Interaktion/dp/3836238985/">Jetzt vorbestellen!</a></p>
 </div>
-
-<form>
-  <input type="password"><button type="submit">Go</button>
-</form>
-<img src="images/shark.svg" width="50" class="vip-tuxedo">
 </section>
 
 <footer>
@@ -117,31 +59,15 @@
     Neue Bahnhofstr. 4<br>
     10245 Berlin</p>
 </footer>
-
-<script src="http://zeptojs.com/zepto.min.js"></script>
-<script src="http://graphicalcooking.co/js/instafeed.min.js"></script>
 <script>
-  var feed = new Instafeed({
-      get: 'tagged',
-      tagName: 'fatale',
-      clientId: '29691a5341184aa3bf34420b3753404f',
-      accessToken: '1610632743.467ede5.ee5ce216bfc249dfbc5485a7b54ae7db',
-      mock: true,
-      success: function(e){
-        for(i = 0; i < 12; i = i+3) {
-          console.log();
-          $('<div class="extras-column"></div>')
-          .append('<a href="'+e.data[(i)].link+'"><img src="'+e.data[i].images.low_resolution.url+'"></a>')
-          .append('<a href="'+e.data[(i+1)].link+'"><img src="'+e.data[(i+1)].images.low_resolution.url+'"></a>')
-          .append('<a href="'+e.data[(i+2)].link+'"><img src="'+e.data[(i+2)].images.low_resolution.url+'"></a>')
-          .appendTo('#instafeed');
-        }
-      },
-      template: '<a href="{{link}}"><img src="{{image}}" /></a>',
-      limit: 12
-  });
-  feed.run();
-</script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
+  ga('create', 'UA-10162229-7', 'auto');
+  ga('send', 'pageview');
+
+</script>
   </body>
 </html>
